slurm/logs/R-run-apricot.398344.err
Traceback (most recent call last):
  File "/coc/flash5/kvr6/dev/robo_declutter/run_apricot_noquery.py", line 136, in main
    preference_response_cleaned = _process_preference_json(preference_response)
  File "/coc/flash5/kvr6/dev/robo_declutter/run_apricot_noquery.py", line 63, in _process_preference_json
    raise e
  File "/coc/flash5/kvr6/dev/robo_declutter/run_apricot_noquery.py", line 57, in _process_preference_json
    response_cleaned = literal_eval(response)
  File "/coc/flash5/kvr6/anaconda3/envs/declutter/lib/python3.9/ast.py", line 62, in literal_eval
    node_or_string = parse(node_or_string, mode='eval')
  File "/coc/flash5/kvr6/anaconda3/envs/declutter/lib/python3.9/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 1
    {"reasoning": "From the five demonstrations, I have noticed that the organization typically places objects in the same category together. All of the toothbrushes, towels and lotions were always placed on the middle-left shelf and all the pill bottles were consistently placed on the middle-right shelf. 
                                                                                                                                                                                                                                                                                                                   ^
SyntaxError: EOL while scanning string literal

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/coc/flash5/kvr6/dev/robo_declutter/run_apricot_noquery.py", line 190, in <module>
    main()
  File "/coc/flash5/kvr6/dev/robo_declutter/run_apricot_noquery.py", line 139, in main
    print(f"Raw response: {preference_response}")
UnicodeEncodeError: 'latin-1' codec can't encode character '\u2013' in position 632: ordinal not in range(256)
srun: error: alexa: task 0: Exited with exit code 1
srun: Terminating StepId=398344.0
